first pic sic attempt

--- a/index.qmd
+++ b/index.qmd
@@ -2,10 +2,115 @@
 title: "pic_sic_ratio"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+## March 2023 NJA PIC to SIC Ratio by Fleet
 
 ```{r}
-1 + 1
+#| echo: false
+#| warning: false
+library(tidyverse)
+library(readxl)
+library(gt)
+library(lubridate)
+library(glue)
+
+tSnrty_List_imp <- read_excel("~/OneDrive - NJASAP/Documents/Seniority Related/Seniority List - Union/2024/2024-03 SeniorityList_UnionCopy.xlsx", 
+                                  sheet = "UNION_EXCEL_FILE",
+                                  range = cell_cols("A:P")
+)
+
+file_name <- basename("~/OneDrive - NJASAP/Documents/
+                              Seniority Related/Seniority List - Union/2024/
+                              2024-03 SeniorityList_UnionCopy.xlsx")
+
+list_year <- str_extract(file_name, "\\d+")
+list_month <- str_extract(file_name, ".*-(\\d{2})", group = 1)
+
+### Seniority Clean-up ###
+
+t2024_03_Snrty <- tSnrty_List_imp %>% 
+  rename_all(tolower) %>% 
+  select(cmi, co_snrty = `company seniority`, snrty = `union seniority`, 4:7,
+         equip_lock = `equip lock`, 9:12, tsp_elect = `tsp election`,
+         year_month = `year month`, published) %>% 
+  mutate(doh = ymd(doh), equip_lock = ymd(equip_lock), published = ymd(published),
+         yos_r = ceiling( as.duration(doh %--% published) / dyears(1) )
+  )
+
+# glimpse(t2024_03_Snrty)
+
+### ESPN Theme ###
+
+gt_theme_espn <- function(data, ...){
+  data %>% 
+    opt_all_caps()  %>%
+    opt_table_font(
+      font = list(
+        google_font("Lato"),
+        default_fonts()
+      )
+    )  %>% 
+    opt_row_striping() %>% 
+    tab_options(
+      row.striping.background_color = "#BFCDDF",
+      table_body.hlines.color = "#f6f7f7",
+      source_notes.font.size = 12,
+      table.font.size = 16,
+      #table.width = px(700),
+      heading.align = "left",
+      heading.title.font.size = 24,
+      table.border.top.color = "transparent",
+      table.border.top.width = px(3),
+      data_row.padding = px(7),
+      ...
+    ) 
+}
+
+### Fleet Ratios ###
+
+tfleet_ratio <- t2024_03_Snrty %>% 
+  select(aircraft, seat) %>% 
+  filter(! aircraft %in% c("G-V", "BE-400A", "CE-560", "HS-125-800XPC")) %>% 
+  group_by(aircraft, seat) %>% 
+  drop_na() %>% 
+  count() %>% 
+  pivot_wider(names_from = seat, values_from = n) %>% 
+  mutate(total = PIC + SIC, pct_PIC = round(PIC/total*100,1), pct_SIC = 100-pct_PIC) %>% 
+  arrange(desc(PIC)) %>% 
+  ungroup()
+
+# view(tfleet_ratio)
+
+
+### Create Table ###
+
+tfleet_ratio %>% 
+  gt(rowname_col = "aircraft") %>% 
+  tab_header(title = md("*NJASAP PIC / SIC Ratio by Fleet*"),
+          #   subtitle = md()
+             )%>% 
+  gt_theme_espn() %>% 
+  cols_label(
+    pct_PIC = "% PIC",
+    pct_SIC = "% SIC",
+  ) %>% 
+  tab_spanner("Count", columns = c(1:4)) %>% 
+  tab_style(
+    style = list(
+      cell_text(style = "italic"),
+      cell_text(weight = "bold")
+    ),
+    locations = cells_body(
+      columns = total
+    )
+  ) %>%
+  sub_missing(
+    columns = everything(),
+    rows = everything(),
+    missing_text = "--"
+  ) %>% 
+  cols_width(everything() ~px(75)) %>% 
+  tab_footnote(footnote = md(glue("*Data current as of {list_year}-{list_month} NJASAP Pilot Seniority List*")
+                             ),
+               locations = cells_title(groups = "title"),
+               placement = "right")
 ```
